# model2obs

./: CHANGELOG.md  README.md  environment.yml  pyproject.toml
install/: envpaths.sh.template  envpaths_NCAR.sh  install.sh  install_NCAR.sh  tutorials_download.sh
model2obs/cli/: download_crocolake.py  download_tutorials_data.py  perfect_model_obs.py
model2obs/io/: file_utils.py  model_tools.py  netcdf_output.py  obs_seq_tools.py
model2obs/model_adapter/: __init__.py  model_adapter.py  model_adapter_CICE.py  model_adapter_MOM6.py  model_adapter_ROMS_Rutgers.py  notes_cice  registry.py
model2obs/utils/: config.py  input_template.nml  namelist.py
model2obs/viz/: __init__.py  interactive_widget.py  interactive_widget_map.py  interactive_widget_profile.py  viz_config.py
model2obs/workflows/: __init__.py  workflow.py  workflow_model_obs.py
pm/features/: FEATURE_REPORT_parallel_processing.md
pm/planning/: plan.md
roms_tests/: roms_test_2.ipynb
tests/: conftest.py
tests/fixtures/: mock_obs_def_cice_mod.f90
tests/integration/: test_parquet_generation.py  test_workflow_model_obs_integration.py
tests/sanity/: test_serial_vs_parallel_parity.py
tests/unit/: test_adapter.py  test_cli_perfect_model_obs.py  test_config.py  test_config_namelist_edge_cases.py  test_download_crocolake.py  test_download_tutorials_data.py  test_file_utils.py  test_model_adapter.py  test_model_tools.py  test_namelist.py  test_netcdf_output.py  test_obs_seq_tools.py  test_workflow.py  test_workflow_merging.py  test_workflow_model_obs_methods.py
tests/viz/: test_interactive_widget.py  test_interactive_widget_map.py  test_interactive_widget_profile.py  test_viz_config.py
tutorials/: CrocoLake_map_temperature.ipynb  MOM6-WOD13-comparison.ipynb  ROMS_tutorial_1-CL-comparison.ipynb  config_tutorial_1.yaml  config_tutorial_1_CICE.yaml  config_tutorial_1_parallel.yaml  config_tutorial_2.yaml  config_tutorial_3.yaml  config_tutorial_roms.yaml  model-obs_project.ipynb  tutorial1_MOM6-CL-comparison-parallel.ipynb  tutorial1_MOM6-CL-comparison.ipynb  tutorial2_MOM6-CL-comparison-float.ipynb
tutorials/config_templates/: config_template_CICE.yaml  config_template_MOM6.yaml  config_template_ROMS_Rutgers.yaml
tutorials/solutions/: tutorial_2_sol2.py  tutorial_2_sol3.py
