[project]
name = "model2obs"
version = "0.4.0"
description = "Python package for comparing ocean models with observations."
authors = [{ name="Enrico Milanese", email="enrico.milanese@whoi.edu" }]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "cartopy<=0.25.0",
    "cftime<=1.6.4",
    "dask<=2025.9.1",
    "gsw<=3.6.20",
    "ipykernel<=6.30.1",
    "ipywidgets<=8.1.7",
    "matplotlib<=3.10.6",
    "netcdf4<=1.7.2",
    "pandas<=2.3.3",
    "pyarrow<=21.0.0",
    "pyDARTdiags @ git+https://github.com/NCAR/pyDARTdiags.git@026671693b4240e15f3651f5414af2283cb471a7",
    "pyyaml<=6.0.3",
    "requests==2.32.5",
    "responses==0.25.8",
    "scipy<=1.16.2",
    "shapely<=2.1.2",
    "tqdm==4.67.1",
    "xarray<=2025.07",
]

[project.scripts]
download_crocolake = "model2obs.cli.download_crocolake:main"
download_tutorials_data = "model2obs.cli.download_tutorials_data:main"
perfect-model-obs = "model2obs.cli.perfect_model_obs:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["model2obs*"]

[tool.setuptools.package-data]
"model2obs" = ["utils/*.nml"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.1",
    "coverage>=7.3.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = ["sanity"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "mocking: marks tests focused on external dependency mocking",
    "sanity: end-to-end sanity checks requiring tutorial data and DART (run with 'pytest tests/sanity/')",
]

[tool.coverage.run]
source = ["model2obs"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]
